--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,3 +12,26 @@ services:
       - .env
     extra_hosts:
       - "host.docker.internal:host-gateway"
+
+  redis:
+    image: redis:latest
+    container_name: redis_server
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+
+  celery_worker:
+    build: .
+    container_name: celery_worker
+    command: celery -A elise.celery_worker worker --loglevel=info
+    volumes:
+      - ./elise:/app/elise
+    env_file:
+      - .env
+    depends_on:
+      - redis
+      - fastapi
+
+volumes:
+  redis_data:
