All docker done.

--- a/docker-compose.https.yml
+++ b/docker-compose.https.yml
@@ -12,6 +12,34 @@ services:
       - .env
     extra_hosts:
       - "host.docker.internal:host-gateway"
+    depends_on:
+      - mongo
+      - redis
+    networks:
+      - app-network
+
+  redis:
+    image: redis:latest
+    container_name: redis_server
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+    networks:
+      - app-network
+
+  mongo:
+    image: mongo:latest
+    container_name: mongo_server
+    ports:
+      - "27017:27017"
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: elise
+      MONGO_INITDB_ROOT_PASSWORD: elise_can_open_doors
+      MONGO_INITDB_DATABASE: elise_db
+    volumes:
+      - mongo_data:/data/db
+      - ./mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
     networks:
       - app-network
 
@@ -29,6 +57,10 @@ services:
       - fastapi
     networks:
       - app-network
+
+volumes:
+  redis_data:
+  mongo_data:
 
 networks:
   app-network:
