--- a/nginx.conf
+++ b/nginx.conf
@@ -1,16 +1,16 @@
 server {
     listen 80;
-    server_name your-domain.com;
+    server_name tunel.healthailabs.com;
     return 301 https://$server_name$request_uri;
 }
 
 server {
     listen 443 ssl http2;
-    server_name your-domain.com;
+    server_name tunel.healthailabs.com;
 
     # SSL Configuration
-    ssl_certificate /etc/letsencrypt/live/your-domain.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/your-domain.com/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/tunel.healthailabs.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/tunel.healthailabs.com/privkey.pem;
     
     # SSL Security Settings
     ssl_protocols TLSv1.2 TLSv1.3;
@@ -27,7 +27,7 @@ server {
 
     # Proxy to FastAPI application
     location / {
-        proxy_pass http://127.0.0.1:8000;
+        proxy_pass http://fastapi:8000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
