--- a/nginx.conf
+++ b/nginx.conf
@@ -27,7 +27,7 @@ server {
 
     # Proxy to FastAPI application
     location / {
-        proxy_pass http://fastapi:8000;
+        proxy_pass http://localhost:8000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
