--- a/docker-compose.https.yml
+++ b/docker-compose.https.yml
@@ -42,21 +42,18 @@ services:
       - ./mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
     networks:
       - app-network
-
-  nginx:
-    image: nginx:alpine
-    container_name: nginx_proxy
-    ports:
-      - "80:80"
-      - "443:443"
+  celery_worker:
+    build: .
+    container_name: celery_worker
+    command: celery -A elise.celery_worker worker --loglevel=info
     volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf
-      - ./ssl:/etc/letsencrypt
-      - ./elise/static:/app/elise/static
+      - ./elise:/app/elise
+    env_file:
+      - .env
     depends_on:
+      - redis
+      - mongo
       - fastapi
-    networks:
-      - app-network
 
 volumes:
   redis_data:
