Make work local and dev.

--- a/.env.dev
+++ b/.env.dev
@@ -1,6 +1,5 @@
 MONGO_URI=mongodb://elise:elise_can_open_doors@host.docker.internal:27017/elise_db?authSource=elise_db
 MONGO_DB_NAME=elise_db
 ROOT_PATH=/elise
-CELERY_BROKER=redis://localhost:6379/0
-CELERY_BACKEND=redis://localhost:6379/1
-
+CELERY_BROKER=redis://redis:6379/0
+CELERY_BACKEND=redis://redis:6379/0
