Added context to question.

--- a/.env.dev
+++ b/.env.dev
@@ -1,4 +1,4 @@
-MONGO_URI=mongodb://elise:elise_can_open_doors@host.docker.internal:27017/elise_db?authSource=elise_db
+MONGO_URI=mongodb://elise:elise_can_open_doors@mongo:27017/elise_db?authSource=elise_db
 MONGO_DB_NAME=elise_db
 ROOT_PATH=/elise
 CELERY_BROKER=redis://redis:6379/0
